--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Voices-Of-Valbury-new-main.sln"
+    "dotnet.defaultSolution": "Voices-Of-Valbury.sln"
 }
