--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Voices-Of-Valbury.sln"
+    "dotnet.defaultSolution": "Untitled-GDGoC-USLS-2025-project1.sln"
 }
